# bevy-fps

./: Cargo.toml  LICENSE_MIT
assets/: models.blend  models.blend1
assets/models/: World.glb
src/: main.rs
src/app/: mod.rs
src/app/camera/: camera_replace_proxies.rs  camera_tracking.rs  mod.rs
src/app/lightning/: lightning_replace_proxies.rs  mod.rs
src/app/physics/: controls.rs  mod.rs  physics_replace_proxies.rs  utils.rs
src/game/: mod.rs  player.rs  world.rs
src/main_menu/: components.rs  mod.rs
src/main_menu/systems/: camera.rs  layout.rs  mod.rs
