[package]
name = "bevy-fps"
version = "0.1.0"
authors = ["aligator <me@aligator.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0" }
bevy_rapier3d = { version = "0.23.0", features = ["debug-render-3d"] }
bevy-inspector-egui = { version = "0.21.0", features = ["default"] }
bevy-tnua-rapier3d = "0.1.0"
bevy-tnua = "0.13.0"
bevy_editor_pls = "0.6.0"
bevy_gltf_components = "0.2.0"
bevy_asset_loader = "0.20.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
